# chess-tutor

./: .flake8  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: README.md
data/eval/: golden_dataset.jsonl
src/chess_tutor/: __init__.py  app.py  config.py
src/chess_tutor/data_collection/: __init__.py  download.py  sources.py
src/chess_tutor/data_processing/: documents.py
src/chess_tutor/evaluation/: __init__.py  generator.py  golden_dataset.py  metrics.py  retriever.py  run.py
src/chess_tutor/processing/: __init__.py  chunking.py  documents.py
src/chess_tutor/rag/: engine.py  memory.py  prompts.py
src/chess_tutor/vector_store/: __init__.py  index.py
